--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
     <title>Blog</title>
 </head>
 <body>
-    <div class="container px-0">
-        <div class="row my-2 border-bottom">
-            <a href="#" class="col text-secondary">Subscribe</a>
-            <h2 class="col-2 offset-3 font-weight-bold text-center">Large</h2>
-            <div class="container col-auto offset-3">
-                <a href="#" class="text-secondary ml-auto align-self-center"><i class="fas fa-search"></i></a>
-                <button type="button" class="btn btn-outline-secondary btn-sm ml-auto my-3">Sign up</button>
+    <div class="container col-md-10 mx-md-auto px-0">
+        <div class="row border-bottom align-items-baseline">
+            <a href="#" class="col-auto text-secondary">Subscribe</a>
+            <h2 class="col-2 ml-auto font-weight-bold text-center">Large</h2>
+            <div class="container col-auto mx-0 ml-auto">
+                <a href="#" class="text-secondary align-self-center"><i class="fas fa-search"></i></a>
+                <button type="button" class="btn btn-outline-secondary btn-sm">Sign up</button>
             </div>
         </div>
-        <nav class="navbar navbar-expand-md">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="#">World</a></li>
-                <li class="nav-item"><a href="#">U.S.</a></li>
-                <li class="nav-item"><a href="#">Technology</a></li>
-                <li class="nav-item"><a href="#">Design</a></li>
-                <li class="nav-item"><a href="#">Culture</a></li>
-                <li class="nav-item"><a href="#">Business</a></li>
-                <li class="nav-item"><a href="#">Politics</a></li>
-                <li class="nav-item"><a href="#">Opinion</a></li>
-                <li class="nav-item"><a href="#">Science</a></li>
-                <li class="nav-item"><a href="#">Health</a></li>
-                <li class="nav-item"><a href="#">Style</a></li>
-                <li class="nav-item"><a href="#">Travel</a></li>
+        <nav class="navbar navbar-expand-md px-0 text-secondary">
+            <ul class="nav nav-fill">
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">World</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">U.S.</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Technology</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Design</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Culture</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Business</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Politics</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Opinion</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Science</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Health</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Style</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-secondary">Travel</a></li>
             </ul>
         </nav>
         <div class="jumbotron bg-dark text-light">
@@ -44,32 +44,36 @@
             </div>
         </div>
         <div class="row">
-            <div class="card">
-                <div class="card-body">
-                    <div class="container-fluid">
-                        <h3>World</h3>
-                        <h2>
-                            Featured post
+            <div class="card col-6">
+                <div class="card-body py-0 pr-0">
+                    <div class="row">
+                        <div class="col-8 py-2">
+                            <h5 class="text-primary font-weight-bold">World</h5>
+                            <h3 class="font-weight-bold">
+                                Featured post
+                            </h3>
                             <small class="text-muted">Nov 12</small>
-                        </h2>
-                        <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#">Continue reading</a>
+                            <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#">Continue reading</a>
+                        </div>
+                        <div class="col-4 bg-dark text-secondary text-center align-content-stretch py-auto">Thumbnail</div>
                     </div>
-                    <img src="#" alt="Thumbnail">
                 </div>
             </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="container-fluid">
-                        <h3>Design</h3>
-                        <h2>
-                            Post title
+            <div class="card col-6">
+                <div class="card-body py-0 pr-0">
+                    <div class="row">
+                        <div class="col-8 py-2">
+                            <h5 class="text-success font-weight-bold">Design</h5>
+                            <h3 class="font-weight-bold">
+                                Post title
+                            </h3>
                             <small class="text-muted">Nov 11</small>
-                        </h2>
-                        <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#">Continue reading</a>
+                            <p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#">Continue reading</a>
+                        </div>
+                        <div class="col-4 bg-dark text-secondary text-center align-content-stretch py-auto">Thumbnail</div>
                     </div>
-                    <img src="#" alt="Thumbnail">
                 </div>
             </div>
         </div>
